force-app/main/default/objects/XactlyExpress__XCQuotaDetail__c/fields/XactlyExpress__M11Amount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__M11Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>M11Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>