force-app/main/default/objects/XactlyExpress__XCQuotaDetail__c/fields/XactlyExpress__MeasureId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MeasureId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MeasureId</label>
    <referenceTo>XactlyExpress__XCMeasure__c</referenceTo>
    <relationshipName>XCQuotaDetails</relationshipName>
    <type>Lookup</type>
</CustomField>