force-app/main/default/objects/XactlyExpress__XCQuotaDetail__c/fields/XactlyExpress__OverrideDefault__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__OverrideDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverrideDefault</label>
    <type>Checkbox</type>
</CustomField>