force-app/main/default/objects/XactlyExpress__XCQuotaDetail__c/fields/XactlyExpress__ProfilePlanID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfilePlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProfilePlanID</label>
    <referenceTo>XactlyExpress__XCProfilePlan__c</referenceTo>
    <relationshipLabel>XCQuotaDetails</relationshipLabel>
    <relationshipName>XCQuotaDetails</relationshipName>
    <type>Lookup</type>
</CustomField>