force-app/main/default/objects/XactlyExpress__XCQuotaDetail__c/fields/XactlyExpress__Q2Amount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Q2Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Q2Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>