force-app/main/default/objects/XactlyExpress__XCQuotaDetail__c/fields/XactlyExpress__Q4Amount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Q4Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Q4Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>